manifests/uc11/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc11
  namespace: uc11
  labels:
    app.kubernetes.io/name: uc11
    app.kubernetes.io/instance: uc11
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: uc11
      app.kubernetes.io/instance: uc11
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uc11
        app.kubernetes.io/instance: uc11
    spec:
      serviceAccountName: uc11
      securityContext:
        {}
      containers:
        - name: uc11
          securityContext:
            {}
          image: "nginx:1.16.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - name: nginx-index-config
            mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-config
        configMap:
          name: uc11-config
