manifests/uc11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uc11
  namespace: uc11
  labels:
    app.kubernetes.io/name: uc11
    app.kubernetes.io/instance: uc11
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uc11
    app.kubernetes.io/instance: uc11
