manifests/uc11/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uc11
  namespace: uc11
  labels:
    app.kubernetes.io/name: uc11
    app.kubernetes.io/instance: uc11
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: uc11
              port:
                number: 80
